@@ -4,6 +4,9 @@ Pkgcore Release Notes
 See ChangeLog for full commit logs; this is summarized/major changes.
 
 
+* pkgcore no longer supports manifest version1; nothing else supports
+  it now, it's no longer in use, thus the removal.
+
 * new pmaint 'mirror' command.  This is used for pulling down
   all distfiles that could be required for a specific package.
 
